# Rust-Raw-Vulkan-Library

./: .gitmodules  README.md
bindgen-runner/: Cargo.toml
bindgen-runner/src/: main.rs  utils.rs
bindgen-runner/src/utils/: bitfields.rs  clangs.rs  common_generator.rs  extract_layout_assertions.rs  run_rustfmt.rs
raw-vulkan-library/: Cargo.toml
raw-vulkan-library/src/: lib.rs  macros.rs  vulkan_core_aarch64_unknown_linux_gnu.rs  vulkan_core_i686_pc_windows_msvc.rs  vulkan_core_i686_unknown_linux_gnu.rs  vulkan_core_x86_64_pc_windows_msvc.rs
