[package]
name = "bindgen-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bindgen = "0.72.0"
clang-ast = "0.1.31"
prettyplease = "0.2.34"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.13.0"
syn = "2.0.103"
try_match = "0.4.2"
serde_json = "1.0.140"
ascii = "1.1.0"
memchr = "2.7.5"
